# orca-fleet

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/sessions/: .gitkeep
logs/: .gitkeep
src/: __init__.py  config.py  main.py
src/core/: __init__.py  client.py  exceptions.py  session_manager.py
src/features/: __init__.py  account.py  bulk_join.py  bulk_leave.py  bulk_reaction.py  health_check.py
src/menu/: __init__.py  display.py  menu.py
src/utils/: __init__.py  logger.py  validators.py
